File export import function

--- a/src/main/resources/static/html/error.html
+++ b/src/main/resources/static/html/error.html
@@ -6,7 +6,7 @@
 		<link rel="shortcut icon"  type="image/x-icon" href="../image/icon/decluna.png"/>
 		<script type="text/javascript" src="../framework/decluna/jq/decluna-jq.js" ></script>
 		<link rel="stylesheet" href="../css/error.css" />
-		<script type="text/javascript" src="../js/error.js" ></script>
+		<script type="text/javascript" src="../js/error.luna" ></script>
 	</head>
 	
 <body>
