--- a/src/main/resources/static/html/record.html
+++ b/src/main/resources/static/html/record.html
@@ -22,7 +22,6 @@
 		<script type="text/javascript" src="../framework/bg-record/bg-record.js" ></script>
 			<div id="nav"></div>
 			<div class="wordEntry">
-
 				<div class="word">
 					<div class="input-group mb-3 ">
 						<div class="input-group-prepend ">
@@ -68,12 +67,12 @@
 				<div class="button ">
 					<button type="button" onclick="addAttribute()" class="btn btn-dark cursor_hover" title="Add word attributes">Add attribute </button>
 					<button type="button" onclick="delAttribute()" class="btn btn-dark cursor_hover" title="Delete word attributes">Del attribute </button>
-					<button type="button" onclick="recordWord()" class="btn btn-dark cursor_hover" title="Add to the word pool" data-toggle="modal" data-target="#ale">Add</button>
+					<button type="button" onclick="recordWord()" class="btn btn-dark cursor_hover" title="Add to the word pool" data-toggle="modal" data-target="#alert">Add</button>
 				</div>
 			</div>
 
 			<!-- Hidden area -->
-			<div class="modal fade" id="ale">
+			<div class="modal fade" id="alert">
 				<div class="modal-dialog">
 					<div class="modal-header">
 						<div class="alert alert-warning" id="alert_title">
