--- a/src/main/resources/static/html/lookup.html
+++ b/src/main/resources/static/html/lookup.html
@@ -22,7 +22,7 @@
 		<div class="lookup">
 			<div class="container mt-3">
 				<div class="input-group mb-3 transparentElement">
-					<input type="text" id="word" class="form-control transparentElement textColor" placeholder="Search for words in your personal dictionary">
+					<input type="text" id="word" class="cursor_input form-control transparentElement textColor" placeholder="Search for words in your personal dictionary">
 					<div class="input-group-prepend">
 						<button type="button" class="btn cursor_hover draw" onclick="lookup()">Lookup</button>
 					</div>
